# game-of-life

./: GameOfLife.cabal  GameOfLife.hs  LICENSE  MainTerminal.hs  README  README.md  game_of_life.cabal
src/: GameOfLife.hs  MainGloss.hs  MainTerminal.hs
test/: GameOfLifeTest.hs
