name:                game-of-life
version:             0.1.0.0
synopsis:            Conway's Game of Life
license:             MIT
license-file:        LICENSE
author:              Kyle Konrad
maintainer:          kyle.t.konrad@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     GameOfLife
  build-depends:       base,
                       split                >= 0.2.2,
                       random               >= 1.0.1.1

test-suite game-of-life-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             GameOfLifeTest.hs
  build-depends:       base,
                       Cabal                >= 1.9.2,
                       HUnit                >= 1.2.5,
                       test-framework       >= 0.8,
                       test-framework-hunit >= 0.3

executable game-of-life
  main-is:             MainTerminal.hs
  hs-source-dirs:      src
  other-modules:       GameOfLife
  build-depends:       base,
                       game-of-life,
                       split                >= 0.2.2,
                       ansi-terminal        >= 0.6.1.1,
                       random               >= 1.0.1.1,
                       terminal-size        >= 0.2.1.0
